[package]
name = "IFS"
version = "0.1.0"
edition = "2024"

[dependencies]
eframe = "0.33.0"
egui_extras = { version = "0.33.0", features = ["all_loaders"] }
formulac = "0.5.0"
image = "0.25.8"
num-complex = "0.4.6"
rand = "0.9.2"
rand_distr = "0.5.1"
rayon = "1.11.0"

[dev-dependencies]
formulac = "0.5.0"
