[package]
name = "IFS"
version = "0.1.0"
edition = "2024"

[profile.dev]
opt-level = 1

[profile.dev.package."*"]
opt-level = 3

[dependencies]
anyhow = "1.0.102"
eframe = "0.33.0"
egui_extras = { version = "0.33.0", features = ["all_loaders"] }
formulac = "0.5.0"
image = "0.25.8"
num-complex = "0.4.6"
rand = "0.9.2"
rand_distr = "0.5.1"
rayon = "1.11.0"
spfunc = "0.1.3"

[dependencies.ifs_lang]
git = "https://github.com/Yoplitein/ifs_lang.git"
rev = "b7d9a3865f63c2a2f3fb92e4f131940bb10f1011"
